--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html">Web Arisan PKK</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -39,7 +40,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2">Website Arisan PKK Desa Wage</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Website sistem informasi arisan yang di rancang untuk membantu mengelola sistem arisan</p>
+                                <p class="lead fw-normal text-white-50 mb-4">Website sistem informasi arisan yang dirancang untuk membantu mengelola sistem arisan</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="login.php">Get Started</a>
                                     <!-- <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a> -->
@@ -151,21 +152,21 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <form>
+                            <form action="#" onsubmit="kirimPesanWA()">
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="mb-3">
-                                            <input class="form-control bg-light" placeholder="Masukkan Nama Anda" type="text">
+                                            <input class="form-control bg-light" placeholder="Masukkan Nama Anda" type="text" id="nama">
                                         </div>
                                     </div>
-                                    <div class="col-12">
+                                    <!-- <div class="col-12">
                                         <div class="mb-3">
                                             <input class="form-control bg-light" placeholder="Masukkan Email Anda" type="email">
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="col-12">
                                         <div class="mb-3">
-                                            <textarea class="form-control bg-light" placeholder="Masukkan Pesan Anda" rows="6"></textarea>
+                                            <textarea class="form-control bg-light" placeholder="Masukkan Pesan Anda" rows="8" id="pesan"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-4">
@@ -177,11 +178,16 @@
                             </form>
                         </div>
                         <div class="col-md-6">
-                            <div class="mt-4 mt-md-0"><img alt="Map" class="img-fluid" src="asset-homepage/img/map.png"></div>
+                            <div class="mt-4 mt-md-0">
+                                <a href="https://maps.app.goo.gl/2y4YeKCZ8VDsSbTY8" target="_blank">
+                                    <img alt="Map" class="img-fluid" src="asset-homepage/img/map.png">
+                                </a>
+                            </div>
                             <div class="mt-3">
                                 <p>Jalan Gadung RT 03 RW 10 Wage Taman Sidoarjo.</p>
                             </div>
                         </div>
+                        
                     </div>
                 </div>
             </section>
@@ -205,6 +211,13 @@
         <!-- js bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <!-- JS-->
-        <script src=""></script>
+        <script>
+            function kirimPesanWA(){
+                const urlToWA = `https://wa.me/6285714775537?text=Saya ${nama.value}, ${pesan.value}`;
+                window.open(urlToWA, "_blank");
+                nama.value = '';
+                pesan.value = '';
+            }
+            </script>            
     </body>
 </html>
