--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#documentation">Documentation</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about">Tentang</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#documentation">Dokumentasi</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
                             <li class="nav-item"><a class="nav-link" href="login.php">Login</a></li>
                         </ul>
                     </div>
@@ -42,7 +42,7 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Website Arisan PKK Desa Wage</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Website sistem informasi arisan yang dirancang untuk membantu mengelola sistem arisan</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="login.php">Get Started</a>
+                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="login.php">Mulai</a>
                                     <!-- <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a> -->
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                     <div class="row justify-content-center">
                         <div class="col-md-8">
                             <div class="text-center">
-                                <h2 class="fw-bolder">About</h2>
+                                <h2 class="fw-bolder">Tentang</h2>
                                 <p class="lead fw-normal text-muted mb-5">Website Arisan PKK merupakan platform digital yang memungkinkan anggota PKK untuk terhubung secara online, membagikan informasi terkait arisan, mengakses jadwal arisan, dan berinteraksi dengan anggota lainnya melalui fitur komunikasi yang disediakan.</p>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8 col-xl-6">
                             <div class="text-center">
-                                <h2 class="fw-bolder">Documentation</h2>
+                                <h2 class="fw-bolder">Dokumentasi</h2>
                                 <p class="lead fw-normal text-muted mb-5">Dokumentasi kegiatan arisan PKK RT 03 RW 10 Desa Wage Taman Sidoarjo</p>
                             </div>
                         </div>
@@ -147,7 +147,7 @@
                 <div class="container">
                     <div class="row justify-content-center text-center mb-3 mb-lg-5">
                         <div class="col-lg-8 col-xxl-7">
-                            <h2 class="fw-bolder">Contact Us</h2>
+                            <h2 class="fw-bolder">Kontak</h2>
                         </div>
                     </div>
                     <div class="row">
